endPoint原来用的是ECS 的经典网络访问（内网），发现不行，后面改成了外网访问，另外，如果是通过RAM访问控制，需要对用户设置权限

--- a/service/service_oss/src/main/resources/application.yml
+++ b/service/service_oss/src/main/resources/application.yml
@@ -5,11 +5,13 @@ spring:
     name: service-oss
   profiles:
     active: dev
-
+  servlet:
+    multipart:
+      max-file-size: 10MB
 aliyun:
   oss:
     file:
-      endpoint: oss-cn-hangzhou-internal.aliyuncs.com
+      endpoint: oss-cn-hangzhou.aliyuncs.com
       keyId: LTAI5tRaTHxgfk81RhqjqXMB
       keySecret: si9xFiMIiKWuXFYMYVDfvGqeE4BPKW
       bucketName: guli-edu-sakanal
