--- a/service/service_vod/src/main/resources/application.yml
+++ b/service/service_vod/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8002
+  port: 8003
 spring:
   application:
-    name: ossService
+    name: vodService
   profiles:
     active: dev
   servlet:
@@ -11,7 +11,7 @@ spring:
       max-request-size: 1024MB
   cloud:
     nacos:
+      server-addr: localhost:8848
       discovery:
-        server-addr: localhost:8848
         namespace: 4c3ca9cf-4c8d-47cc-a41c-6b8f9fd3e5f5
 
