--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,7 @@ ENV = 'development'
 
 # base api
 # VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://192.168.38.131:9001'
+# VUE_APP_BASE_API = 'http://192.168.38.131:9001'
+VUE_APP_BASE_API = 'http://localhost:8222'
 VUE_APP_OSS_BASE_API = 'http://localhost:8002'
+VUE_APP_VOD_BASE_API = 'http://localhost:8003'
