--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ build/
 
 /service/service_oss/src/main/resources/application.yaml
 /service/service_vod/src/main/resources/application.yaml
+/service/service_vod/src/test/
